# torch_pybind_test

./: .gitignore  CMakeLists.txt  Model.py  current_0.pt  main.cpp
